6632696: Writing to closed output files (writeBytes) leaks native memory (unix)

Reviewed-by: alanb, iris